Preparing model and mongo db connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:21343",
+    "Database": "diff"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
